# qp-zk-circuits

./: .gitignore  Cargo.toml  PR_DESCRIPTION.md  README.md  SPLIT_PR_1_DESCRIPTION.md  SPLIT_PR_2_DESCRIPTION.md  SPLIT_STATUS.md  clippy.sh  flake.nix  proof_debug.json  rust-toolchain.toml
.github/actions/macos/: action.yml
.github/actions/ubuntu/: action.yml
.github/workflows/: ci.yml  codeql.yml  create-release-proposal.yml  create-release-tag-and-publish.yml
audits/: Audit-July-2026-v12.md
circuits-proptest/: Cargo.toml  README.md
circuits-proptest/src/: harness.rs  lib.rs  strategies.rs
circuits-proptest/tests/: enforce_target_less_than_const.rs  is_const_less_than.proptest-regressions  is_const_less_than.rs
common/: Cargo.toml  README.md
common/benches/: merkle_tree.rs
common/src/: aggregation.rs  circuit.rs  codec.rs  gadgets.rs  lib.rs  serialization.rs  storage_proof.rs  utils.rs  zk_merkle.rs
formal/: SPEC.md  WormholeSpec.lean  lake-manifest.json  lakefile.toml
formal/WormholeSpec/: Aggregation.lean  AggregationBridge.lean  Basic.lean  Encoding.lean  Hash.lean  Leaf.lean  LeafBinding.lean  Security.lean  Trusted.lean
paper/: Makefile  main.abstract  main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
scripts/: build-circuits.sh
voting/: Cargo.toml
voting/src/: lib.rs
wormhole/: README.md  test-block-headers.json
wormhole/aggregator/: Cargo.toml  README.md
wormhole/aggregator/benches/: aggregator.rs
wormhole/aggregator/examples/: generate_l1_fixture.rs
wormhole/aggregator/src/: aggregator.rs  config.rs  dummy_proof.rs  lib.rs  pool.rs  profile.rs  security_poc.rs  util.rs
wormhole/aggregator/src/circuits/: layer1.rs  mod.rs  tree.rs
wormhole/aggregator/src/common/: mod.rs  recursive.rs  targets_layout.rs  utils.rs
wormhole/aggregator/src/layer0/circuit/: build.rs  circuit_logic.rs  constants.rs  inner.rs  mod.rs  outer.rs
wormhole/aggregator/src/layer0/prover/: inner.rs  lib.rs  mod.rs  ordering.rs  outer.rs  session.rs  targets_layout.rs  witness.rs  wrapper.rs
wormhole/aggregator/src/layer1/circuit/: build.rs  circuit_logic.rs  constants.rs  mod.rs
wormhole/aggregator/src/layer1/prover/: lib.rs  mod.rs  targets_layout.rs  witness.rs
wormhole/aggregator/src/private_batch/circuit/: build.rs  circuit_logic.rs  constants.rs  mod.rs
wormhole/aggregator/src/private_batch/prover/: lib.rs  mod.rs  witness.rs
wormhole/aggregator/src/public_batch/circuit/: build.rs  circuit_logic.rs  constants.rs  mod.rs
wormhole/aggregator/src/public_batch/prover/: lib.rs  mod.rs  witness.rs
wormhole/aggregator/src/zk_wrapper/: build.rs  circuit.rs  mod.rs
wormhole/circuit/: Cargo.toml  README.md
wormhole/circuit-builder/: Cargo.toml  README.md  build.rs
wormhole/circuit-builder/examples/: public_batch_bench.rs
wormhole/circuit-builder/src/: lib.rs  main.rs
wormhole/circuit/src/: block_header.rs  circuit.rs  inputs.rs  lib.rs  nullifier.rs  profile.rs  substrate_account.rs  unspendable_account.rs  zk_merkle_proof.rs
wormhole/circuit/src/block_header/: header.rs  mod.rs
wormhole/circuit/src/storage_proof/: leaf.rs  mod.rs
wormhole/example/: .gitignore  Cargo.toml  README.md  proof_debug.json
wormhole/example/src/: main.rs  proof_processing.rs  utils.rs
wormhole/inputs/: Cargo.toml  README.md
wormhole/inputs/src/: lib.rs
wormhole/memprof/: Cargo.toml  README.md
wormhole/memprof/scripts/: sweep_and_plot.py
wormhole/memprof/src/: config.rs  main.rs  memory.rs  report.rs  workload.rs
wormhole/memprof/sweep-results/: data.csv  report.md
wormhole/prover/: Cargo.toml  README.md
wormhole/prover/benches/: prover.rs
wormhole/prover/src/: lib.rs
wormhole/tests/: Cargo.toml  README.md
wormhole/tests/src/: circuit_helpers.rs  layer0_equivalence.rs  lib.rs
wormhole/tests/src/aggregator/: aggregator_tests.rs  mod.rs
wormhole/tests/src/circuit/: block_header_tests.rs  circuit_data_tests.rs  mod.rs  nullifier_tests.rs  storage_proof_tests.rs  substrate_account_tests.rs  unspendable_account_tests.rs
wormhole/tests/src/prover/: prover_tests.rs
wormhole/tests/src/verifier/: verifier_tests.rs
wormhole/tests/test-helpers/: Cargo.toml
wormhole/tests/test-helpers/src/: fake_leaf.rs  lib.rs
wormhole/tests/tests/: encoding_safety.rs  spec_differential.rs
wormhole/verifier/: Cargo.toml  README.md
wormhole/verifier/benches/: verifier.rs
wormhole/verifier/src/: lib.rs
