[workspace]
members = [
	"common",
	"voting",
	"wormhole/aggregator",
	"wormhole/circuit",
	"wormhole/circuit-builder",
	"wormhole/inputs",
	"wormhole/prover",
	"wormhole/tests",
	"wormhole/tests/test-helpers",
	"wormhole/verifier",
]
# Example excluded - depends on quantus-cli which is external
exclude = ["wormhole/example"]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.98", default-features = false }
criterion = { version = "0.5.1", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
qp-plonky2 = { version = "1.1.5", default-features = false, features = ["std"] }
qp-poseidon-core = { version = "1.2", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[workspace.package]
authors = ["Quantus Network"]
categories = ["cryptography"]
description = "Quantus-Network - Wormhole circuit implementation using Plonky2"
edition = "2021"
keywords = ["circuits", "plonky2", "quantus-network", "wormhole", "zk"]
license = "MIT"
repository = "https://github.com/Quantus-Network/qp-zk-circuits"
version = "1.1.1"

[workspace.lints.clippy]
uninlined_format_args = "allow"

[patch.crates-io]
qp-plonky2 = { git = "https://github.com/Quantus-Network/qp-plonky2.git", branch = "illuzen/new-rate" }
qp-rusty-crystals-dilithium = { git = "https://github.com/Quantus-Network/qp-rusty-crystals.git", branch = "illuzen/injective-wormhole" }
qp-rusty-crystals-hdwallet = { git = "https://github.com/Quantus-Network/qp-rusty-crystals.git", branch = "illuzen/injective-wormhole" }
