[workspace]
members = [
	"common",
	"voting",
	"wormhole/aggregator",
	"wormhole/circuit",
	"wormhole/circuit-builder",
	"wormhole/inputs",
	"wormhole/memprof",
	"wormhole/prover",
	"wormhole/tests",
	"wormhole/tests/test-helpers",
	"wormhole/verifier",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.98", default-features = false }
criterion = { version = "0.5.1", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
qp-plonky2 = { path = "../qp-plonky2/plonky2", default-features = false, features = ["std"] }
qp-plonky2-field = { path = "../qp-plonky2/field", default-features = false }
qp-plonky2-verifier = { path = "../qp-plonky2/verifier", default-features = false }
qp-poseidon-core = { path = "../qp-poseidon", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[workspace.package]
authors = ["Quantus Network"]
categories = ["cryptography"]
description = "Quantus-Network - Wormhole circuit implementation using Plonky2"
edition = "2021"
keywords = ["circuits", "plonky2", "quantus-network", "wormhole", "zk"]
license = "MIT"
repository = "https://github.com/Quantus-Network/qp-zk-circuits"
version = "2.0.1"

[workspace.lints.clippy]
uninlined_format_args = "allow"
