[package]
authors.workspace = true
description = "Property-based tests for Quantus ZK circuit gadgets"
edition.workspace = true
license.workspace = true
name = "circuits-proptest"
publish = false
version.workspace = true

[dependencies]
anyhow = { workspace = true, default-features = true }
proptest = "1.11"
qp-plonky2 = { workspace = true, default-features = true }
zk-circuits-common = { package = "qp-zk-circuits-common", version = "2.0.1", path = "../common" }

[lints]
workspace = true
