[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "qp-zk-circuits-common"
readme = "README.md"
version.workspace = true

[dependencies]
anyhow = { workspace = true, default-features = false }
hex = { workspace = true }
qp-plonky2 = { workspace = true, default-features = false }
qp-poseidon-core = { workspace = true, default-features = false, features = [
	"p2",
	"p3",
] }
qp-wormhole-inputs = { version = "1.0.7", path = "../wormhole/inputs", default-features = false }
rand = "0.8"
serde = { workspace = true }

[features]
default = ["std"]
std = [
	"anyhow/std",
	"qp-plonky2/std",
	"qp-poseidon-core/std",
	"qp-wormhole-inputs/std",
	"serde/std",
]
