[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "qp-zk-circuits-common"
readme = "README.md"
version.workspace = true

[dependencies]
anyhow = { workspace = true, default-features = false }
qp-plonky2 = { workspace = true, default-features = false }
qp-poseidon-constants = { version = "=1.1.0", default-features = false }
qp-poseidon-core = { workspace = true, default-features = false }
qp-wormhole-inputs = { version = "=3.1.0", path = "../wormhole/inputs", default-features = false }
rand = { version = "=0.8.6", default-features = false, features = ["alloc"], optional = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = "=1.0.150"

[features]
default = ["std"]
std = [
	"anyhow/std",
	"dep:rand",
	"qp-plonky2/std",
	"qp-poseidon-core/std",
	"qp-wormhole-inputs/std",
	"rand/std",
	"rand/std_rng",
	"serde/std",
]
