[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "qp-wormhole-aggregator"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
qp-plonky2 = { workspace = true }
rayon = { version = "1.10.0", optional = true }
wormhole-circuit = { package = "qp-wormhole-circuit", version = "1.0.1", path = "../circuit", default-features = false }
wormhole-prover = { package = "qp-wormhole-prover", version = "1.0.1", path = "../prover", default-features = false }
zk-circuits-common = { package = "qp-zk-circuits-common", version = "1.0.1", path = "../../common" }

[dev-dependencies]
criterion = { workspace = true }
rand = "0.8"
test-helpers = { path = "../tests/test-helpers", default-features = false }

[features]
default = ["multithread", "std"]
multithread = ["rayon"]
no_zk = []
std = [
	"anyhow/std",
	"qp-plonky2/std",
	"wormhole-circuit/std",
	"wormhole-prover/std",
	"zk-circuits-common/std",
]

[lints]
workspace = true

[[bench]]
harness = false
name = "aggregator"
