[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "qp-wormhole-aggregator"
readme = "README.md"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
hex = "0.4"
qp-plonky2 = { workspace = true }
qp-wormhole-inputs = { version = "1.0.7", path = "../inputs" }
rand = "0.8"
rayon = { version = "1.10.0", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
wormhole-circuit = { package = "qp-wormhole-circuit", version = "1.0.7", path = "../circuit", default-features = false }
wormhole-prover = { package = "qp-wormhole-prover", version = "1.0.7", path = "../prover", default-features = false }
zk-circuits-common = { package = "qp-zk-circuits-common", version = "1.0.7", path = "../../common" }

[dev-dependencies]
criterion = { workspace = true }
test-helpers = { path = "../tests/test-helpers", default-features = false }

[features]
default = ["multithread", "std"]
multithread = ["rayon"]
no_zk = []
std = [
	"anyhow/std",
	"qp-plonky2/std",
	"wormhole-circuit/std",
	"wormhole-prover/std",
	"zk-circuits-common/std",
]

[lints]
workspace = true

[[bench]]
harness = false
name = "aggregator"
