[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "qp-wormhole-circuit-builder"
publish = true
readme = "README.md"
version.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
clap = { version = "4", features = ["derive"] }
qp-plonky2 = { workspace = true, features = ["default"] }
wormhole-aggregator = { package = "qp-wormhole-aggregator", version = "1.0.1", path = "../aggregator", default-features = false, features = [
	"std",
] }
wormhole-circuit = { package = "qp-wormhole-circuit", version = "1.0.1", path = "../circuit", default-features = false, features = [
	"std",
] }
zk-circuits-common = { package = "qp-zk-circuits-common", version = "1.0.1", path = "../../common" }
