[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "qp-wormhole-circuit"
readme = "README.md"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true, features = ["alloc"] }
qp-plonky2 = { workspace = true }
qp-wormhole-inputs = { version = "1.0.6", path = "../inputs", default-features = false }
zk-circuits-common = { package = "qp-zk-circuits-common", version = "1.0.6", path = "../../common", default-features = false }

[features]
default = ["std"]
std = [
	"anyhow/std",
	"qp-plonky2/std",
	"qp-wormhole-inputs/std",
	"zk-circuits-common/std",
]

[lints]
workspace = true
