[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "qp-wormhole-circuit"
readme = "README.md"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true, features = ["alloc"] }
qp-plonky2 = { workspace = true }
qp-wormhole-inputs = { version = "1.1.1", path = "../inputs", default-features = false }
zk-circuits-common = { package = "qp-zk-circuits-common", version = "1.1.1", path = "../../common", default-features = false }

[features]
default = ["std"]
std = [
	"anyhow/std",
	"qp-plonky2/std",
	"qp-wormhole-inputs/std",
	"zk-circuits-common/std",
]
profile = ["std", "qp-plonky2/timing", "qp-plonky2/rand"]

[dev-dependencies]
env_logger = "0.9"

[lints]
workspace = true
