[package]
edition.workspace = true
name = "wormhole-example"
publish = false
version.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
hex = { workspace = true, features = ["alloc"] }
parity-scale-codec = "3.7.5"
qp-plonky2 = { workspace = true, features = ["default"] }
qp-poseidon = { version = "1.4.0", features = ["default"] }
qp-poseidon-core = { workspace = true, default-features = false }
qp-wormhole-inputs = { version = "1.4.2", path = "../inputs" }
quantus-cli = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { version = "1.0", features = ["alloc"] }
sp-core = "39.0.0"
subxt = "0.44.2"
tokio = "1.48.0"
wormhole-aggregator = { package = "qp-wormhole-aggregator", version = "1.4.2", path = "../aggregator", default-features = false, features = [
	"multithread",
	"no_zk",
	"std",
] }
wormhole-circuit = { package = "qp-wormhole-circuit", version = "1.4.2", path = "../circuit", default-features = false, features = [
	"std",
] }
wormhole-prover = { package = "qp-wormhole-prover", version = "1.4.2", path = "../prover", default-features = false }
wormhole-verifier = { package = "qp-wormhole-verifier", version = "1.4.2", path = "../verifier", default-features = false }
zk-circuits-common = { package = "qp-zk-circuits-common", version = "1.4.2", path = "../../common" }
