[package]
authors.workspace = true
description = "Single-shot peak-memory profiler for wormhole proof generation + aggregation."
edition.workspace = true
license.workspace = true
name = "wormhole-memprof"
publish = false
version.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
clap = { version = "=4.6.1", features = ["derive"] }
qp-plonky2 = { workspace = true, features = ["default"] }
rayon = "=1.12.0"
wormhole-aggregator = { package = "qp-wormhole-aggregator", version = "=3.0.0", path = "../aggregator", default-features = false, features = [
	"std",
] }
wormhole-circuit = { package = "qp-wormhole-circuit", version = "=3.0.0", path = "../circuit", default-features = false, features = [
	"std",
] }
wormhole-prover = { package = "qp-wormhole-prover", version = "=3.0.0", path = "../prover", default-features = false, features = [
	"std",
] }
zk-circuits-common = { package = "qp-zk-circuits-common", version = "=3.0.0", path = "../../common" }

[lints]
workspace = true
