[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "qp-wormhole-prover"
readme = "README.md"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
qp-plonky2 = { workspace = true }
qp-wormhole-inputs = { version = "1.0.2", path = "../inputs" }
wormhole-circuit = { package = "qp-wormhole-circuit", version = "1.0.2", path = "../circuit" }
zk-circuits-common = { package = "qp-zk-circuits-common", version = "1.0.2", path = "../../common" }

[dev-dependencies]
criterion = { workspace = true }
test-helpers = { path = "../tests/test-helpers" }

[features]
default = ["std"]
std = [
	"anyhow/std",
	"qp-plonky2/std",
	"wormhole-circuit/std",
	"zk-circuits-common/std",
]

[lints]
workspace = true

[[bench]]
harness = false
name = "prover"
