[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "qp-wormhole-prover"
readme = "README.md"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
qp-plonky2 = { workspace = true }
qp-wormhole-inputs = { version = "2.0.1", path = "../inputs" }
wormhole-circuit = { package = "qp-wormhole-circuit", version = "2.0.1", path = "../circuit" }
zk-circuits-common = { package = "qp-zk-circuits-common", version = "2.0.1", path = "../../common" }

[dev-dependencies]
criterion = { workspace = true }
qp-wormhole-verifier = { version = "2.0.1", path = "../verifier" }
test-helpers = { path = "../tests/test-helpers" }
wormhole-aggregator = { package = "qp-wormhole-aggregator", version = "2.0.1", path = "../aggregator" }

[features]
default = ["std"]
std = [
	"anyhow/std",
	"qp-plonky2/std",
	"wormhole-circuit/std",
	"zk-circuits-common/std",
]

[lints]
workspace = true

[[bench]]
harness = false
name = "prover"
