[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "qp-wormhole-verifier"
readme = "README.md"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
qp-plonky2-verifier = { workspace = true, default-features = false }
qp-wormhole-inputs = { version = "2.0.1", path = "../inputs", default-features = false }

[dev-dependencies]
criterion = { workspace = true }
qp-plonky2-field = { workspace = true, default-features = false, features = ["rand"] }
qp-wormhole-prover = { version = "2.0.1", path = "../prover" }

[features]
default = ["std"]
std = [
	"anyhow/std",
	"qp-plonky2-verifier/std",
	"qp-wormhole-inputs/std",
]

[lints]
workspace = true

[[bench]]
harness = false
name = "verifier"
