[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "qp-wormhole-verifier"
readme = "README.md"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
qp-plonky2-verifier = { version = "=1.5.4", default-features = false }
qp-wormhole-inputs = { version = "=3.1.0", path = "../inputs", default-features = false }
tiny-keccak = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = ["std"]
std = [
	"anyhow/std",
	"qp-plonky2-verifier/std",
	"qp-wormhole-inputs/std",
]

[lints]
workspace = true

[[bench]]
harness = false
name = "verifier"
