[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "test-helpers"
publish = false
version.workspace = true

[dependencies]
anyhow = { workspace = true, default-features = false }
hex = { workspace = true }
qp-plonky2 = { workspace = true, default-features = true }
qp-wormhole-inputs = { version = "1.0.5", path = "../../inputs" }
wormhole-circuit = { package = "qp-wormhole-circuit", version = "1.0.5", path = "../../circuit" }
zk-circuits-common = { package = "qp-zk-circuits-common", version = "1.0.5", path = "../../../common" }
