[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "test-helpers"
publish = false
version.workspace = true

[dependencies]
anyhow = { workspace = true, default-features = false }
hex = { workspace = true }
qp-plonky2 = { workspace = true, default-features = true }
qp-wormhole-inputs = { path = "../../inputs" }
wormhole-circuit = { package = "qp-wormhole-circuit", version = "2.0.0", path = "../../circuit" }
zk-circuits-common = { package = "qp-zk-circuits-common", version = "2.0.0", path = "../../../common" }
